api to get avg per month and change percentage
