# review/controllers/reviewController.js
@@ -346,4 +346,75 @@ const GetMostRecentWords = async(req,res,next) => {
     
 }
 
-module.exports = { GetMostRecentWords,addReviewAssistance,AirportAverageDailyAssistance,AirportAverageDailyQuality,AirportAverageDailyRating,AirportThreeMonthData };
+const GetTotalAverageOfMonthByIata = async(req,res,next) => {
+    try {
+        var {code,month,year} = req.query
+        var Response  = [];
+        month = Number(month);
+        var flag = false;
+        if(month >= 1 && month<=12)
+        {
+            if(month === 1)
+            {
+                //subtract from year 
+                flag = true;
+            }
+            month = month < 10?'0'+(month):(month);
+            year = Number(year);
+            var currentMonth = await utils.GetAverageBytheMonth(month,code,year)
+            var pMonth = month-1 < 10?'0'+(month -1):(month-1);
+            
+            if(flag)
+            {
+                var prevMonth = await utils.GetAverageBytheMonth(12,code,year-1)
+            }
+            else
+            {
+                var prevMonth = await utils.GetAverageBytheMonth(pMonth,code,year)
+            }
+            
+           
+            var NewNumber = currentMonth;
+            var OriginalNumber = prevMonth;
+            if(OriginalNumber === NewNumber)
+            {
+                //equal
+                Response.push({CurrentMonthAvg:currentMonth,prevMonth:prevMonth,"Decrease/Increase":0,"PerIncrease/Decrease":"0 %"})
+            }
+            else if(OriginalNumber >  NewNumber)
+            {
+                //decrease 
+                var Decrease = (OriginalNumber - NewNumber).toFixed(2)
+                var PerDecrease = (Decrease / OriginalNumber * 100 ).toFixed(2) + " %"
+                Response.push({CurrentMonthAvg:currentMonth,prevMonth:prevMonth,PerDecrease:PerDecrease,Decrease:Decrease})
+            }
+            else
+            {
+                //increse
+                var Increase = (NewNumber - OriginalNumber).toFixed(2)
+                var Perincrease = (Increase / OriginalNumber * 100).toFixed(2) ;
+                //check infinity
+                if(Perincrease == "Infinity")
+                {
+                    Perincrease = "Previous Month Avg is 0";
+                }
+                else
+                {
+                    Perincrease += " %";
+                }
+                Response.push({CurrentMonthAvg:currentMonth,prevMonth:prevMonth,PerIncrease:Perincrease,Increase:Increase})
+            }
+            
+            res.status(200).json({Response, msg: `message`});
+        }
+       else
+       {
+        res.status(400).json({Response, msg: `It is a Invalid Month`});
+       }
+    } catch (e) {
+        console.log(e);
+        res.status(500).json({ errors: [{ msg: e.message}]});
+    }
+}
+
+module.exports = { GetTotalAverageOfMonthByIata,GetMostRecentWords,addReviewAssistance,AirportAverageDailyAssistance,AirportAverageDailyQuality,AirportAverageDailyRating,AirportThreeMonthData };
